--- a/Snake/index.html
+++ b/Snake/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Pong</title>
+	<title>Snake</title>
 
 	<style>
 		canvas {
@@ -17,6 +17,6 @@
 </head>
 <body>
 	<canvas id="canvas"></canvas>
-	<script src="pong.js"></script>
+	<script src="snake.js"></script>
 </body>
 </html>
